# kindle_llm_chat

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
kindle.pkg/: config.xml  menu.json
kindle.pkg/layouts/: keyboard-200dpi.xml  keyboard-300dpi.xml
src/: app_window.cpp  app_window.h  chat_store.cpp  chat_store.h  config.cpp  config.h  http_client.cpp  http_client.h  json_file.h  main.cpp  markdown_view.cpp  markdown_view.h  osk.cpp  osk.h  stream_parser.cpp  stream_parser.h
tools/: package_mrpi.sh
